FIZE-598, FIZE-599, FIZE-590: Add comments, avoid overlap and set sidebar width

--- a/assets/index.css
+++ b/assets/index.css
@@ -1,4 +1,5 @@
 :root {
+    /* Anpassung erfolgt durch EZB */
     --system-color: #6667AB;
     --exchange-color: #5E88AB;
     --system-selected-color: #1E2159;
@@ -14,6 +15,7 @@
     --system-opacity-when-unimportant: 40%;
 
     --font-family: "Source Sans Pro";
+    --sidebar-width: 300px;
 }
 
 body {
@@ -27,6 +29,13 @@ body {
 
 h1 {
     color: #000000;
+}
+
+.sidebar {
+    width: var(--sidebar-width);
+    flex: none;
+    max-width: var(--sidebar-width);
+    min-width: var(--sidebar-width);
 }
 
 .subtitle {
@@ -144,17 +153,17 @@ a {
     word-break: break-word;
 }
 
-hr.filter{
+hr.filter {
     margin: 3px 0 10px 0;
     background-color: #6667ab
 }
 
-hr.system{
+hr.system {
     margin: 0;
     background-color: #434343
 }
 
-hr.dataExchange{
+hr.dataExchange {
     margin: 0;
     background-color: #434343
 }
